# coffee-count

./: .env.example  .gitignore  README.md  docker-compose-hub.yml  docker-compose.yml
.github/workflows/: docker-hub-deploy.yml
api-service/: Cargo.toml  Dockerfile
api-service/src/: lib.rs  main.rs
api-service/src/db/: mod.rs
api-service/src/handlers/: categories.rs  counters.rs  health.rs  mod.rs
api-service/src/models/: mod.rs
api-service/src/utils/: auth.rs
api-service/tests/: auth_test.rs  database_test.rs  integration_test.rs
auth-service/: Dockerfile  package-lock.json  package.json
auth-service/src/: app.js
auth-service/src/config/: database.js  redis.js
auth-service/src/middleware/: auth.js  errorHandler.js
auth-service/src/routes/: auth.js  categories.js  counters.js  users.js
auth-service/tests/: auth.test.js
database/init/: 01-init.sql
docs/: DOCKER_HUB.md  ENVIRONMENT.md  README.md  architecture-diagram.md  architecture-mermaid.md
frontend/: Dockerfile  README.md  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.tsx  index.css
frontend/src/components/: FlexibleCounter.tsx
frontend/src/hooks/: useTranslation.ts
frontend/src/locales/: en.ts  index.ts  ja.ts  ko.ts
frontend/src/services/: api.ts
nginx/: nginx.conf
scripts/: README.md  build.sh  docker-hub-deploy-dry-run.sh  docker-hub-deploy.sh  test-docker-hub.sh  test.sh
