[package]
name = "coffee-counter-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework
axum = "0.6.1"
tokio = { version = "1.21", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.3.5", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }

# Serialization
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"

# HTTP Client
reqwest = { version = "0.11.12", features = ["json"] }

# Utilities
chrono = { version = "0.4.22", features = ["serde"] }
uuid = { version = "1.2.2", features = ["v4", "serde"] }
anyhow = "1.0.65"
thiserror = "1.0.37"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

# Environment
dotenvy = "0.15.5"

# Validation
validator = { version = "0.16.0", features = ["derive"] }

[dev-dependencies]
tower-test = "0.4.0"
